# football-wonderkid-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_ingestion.ipynb
